fixing alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,10 +140,7 @@ p {
 }
 
 .adoptorflop {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-top: 100;
+    margin: auto;
 }
 
 .center {
